--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -129,6 +129,9 @@
   <data name="Control_AppFontComboBox.Header" xml:space="preserve">
     <value>应用字体</value>
   </data>
+  <data name="Control_AppNameTipBlock.Text" xml:space="preserve">
+    <value>干净阅读</value>
+  </data>
   <data name="Control_AppSearchBox.PlaceholderText" xml:space="preserve">
     <value>查找书籍</value>
   </data>
@@ -396,11 +399,17 @@
   <data name="Tip_ShelfSelection" xml:space="preserve">
     <value>选择一个书架</value>
   </data>
+  <data name="Tip_SyncBookSuccess" xml:space="preserve">
+    <value>书籍目录获取完成</value>
+  </data>
   <data name="Tip_Topic" xml:space="preserve">
     <value>专题</value>
   </data>
   <data name="Tip_UncateBookList" xml:space="preserve">
     <value>未分类书籍列表</value>
+  </data>
+  <data name="Tip_UpdateBookSuccess" xml:space="preserve">
+    <value>在线书籍已经更新完成</value>
   </data>
   <data name="Tip_UpdateChapter" xml:space="preserve">
     <value>更新章节</value>
