--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -372,6 +372,9 @@
   <data name="Tip_Rank" xml:space="preserve">
     <value>榜单</value>
   </data>
+  <data name="Tip_RebuildSuccess" xml:space="preserve">
+    <value>重新生成成功</value>
+  </data>
   <data name="Tip_Remove" xml:space="preserve">
     <value>移除</value>
   </data>
@@ -380,6 +383,9 @@
   </data>
   <data name="Tip_RepeatBook" xml:space="preserve">
     <value>已包含重复书籍</value>
+  </data>
+  <data name="Tip_SaveSuccess" xml:space="preserve">
+    <value>保存成功</value>
   </data>
   <data name="Tip_SearchResult" xml:space="preserve">
     <value>搜索结果</value>
