--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -279,6 +279,9 @@
   <data name="Control_ShelfNoDataBlock.Description" xml:space="preserve">
     <value>书架空空如也，快打开一本书阅读吧~</value>
   </data>
+  <data name="Control_SpeechVoiceWarningTipBlock.Text" xml:space="preserve">
+    <value>请选择与当前书籍语言匹配的语音，否则将无法生成合适的朗读语音</value>
+  </data>
   <data name="Control_TextIndentSlider.Header" xml:space="preserve">
     <value>行首缩进</value>
   </data>
@@ -287,6 +290,9 @@
   </data>
   <data name="Control_TypeSettingTipBlock.Text" xml:space="preserve">
     <value>排版</value>
+  </data>
+  <data name="Control_VoiceComboBox.Header" xml:space="preserve">
+    <value>朗读语音选择</value>
   </data>
   <data name="Control_WikiButton.Content" xml:space="preserve">
     <value>维基百科</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="Tip_Category" xml:space="preserve">
     <value>分类</value>
+  </data>
+  <data name="Tip_ChooseReadHistory" xml:space="preserve">
+    <value>云端有更新的阅读历史，是否加载云端进度？</value>
   </data>
   <data name="Tip_Confirm" xml:space="preserve">
     <value>确认</value>
