--- a/Clean-Reader/Language/en-US/Resources.resw
+++ b/Clean-Reader/Language/en-US/Resources.resw
@@ -387,6 +387,9 @@
   <data name="Tip_OpenBook" xml:space="preserve">
     <value>Open book</value>
   </data>
+  <data name="Tip_OpenFileWarning" xml:space="preserve">
+    <value>There are external book that will be imported into the app. Do you want to continue?</value>
+  </data>
   <data name="Tip_Progress" xml:space="preserve">
     <value>Progress</value>
   </data>
